--- a/public/posts.css
+++ b/public/posts.css
@@ -1,3 +1,10 @@
+body
+{
+	color: #f5f5f5;
+	font-family: 'Lato', sans-serif;
+	background-color: #4d4e4f;
+}
+
 .inputClass
 {
 height: 200px;
@@ -10,4 +17,37 @@ border-radius: 4px;
 textarea 
 {
     resize: none;
+}
+.postContainerHolder
+{
+	width: 400px;
+	box-shadow: 0 0 10px rgba(0,0,0,0.6);
+	-moz-box-shadow: 0 0 10px rgba(0,0,0,0.6);
+	-webkit-box-shadow: 0 0 10px rgba(0,0,0,0.6);
+	-o-box-shadow: 0 0 10px rgba(0,0,0,0.6);
+	margin-left: 435px;
+
+}
+.postContainer
+{	
+	text-align: center;
+	color: #f5f5f5;
+	padding: 15px;
+	margin-bottom: 15px;
+	margin-top: 15px;
+	border-radius: 5px;
+	word-wrap: break-word;
+}
+
+.datePosted
+{
+	margin-top: 10px;
+	display: inline-block;
+
+}
+
+table
+{
+	width:400px;
+	height: 200px;
 }
