I updated my use statements on my  postsController to make my code more efficient

--- a/public/posts.css
+++ b/public/posts.css
@@ -39,6 +39,13 @@ textarea
 	word-wrap: break-word;
 }
 
+
+.pageChoice
+{
+	height: 60px;
+	margin-left: 532px;
+}
+
 .datePosted
 {
 	margin-top: 10px;
