--- a/public/posts.css
+++ b/public/posts.css
@@ -7,11 +7,19 @@ body
 
 .inputClass
 {
-height: 200px;
-width: 300px;
-margin-left: 500px;
-margin-top: 150px;
-border-radius: 4px;
+	height: 200px;
+	width: 300px;
+	margin-left: 500px;
+	margin-top: 150px;
+	border-radius: 4px;
+}
+
+.showPost
+{
+
+	width: 300px;
+	margin-top: 150px;
+	border-radius: 4px;
 }
 
 textarea 
@@ -39,6 +47,19 @@ textarea
 	word-wrap: break-word;
 }
 
+#error404
+{
+	height: 60px;
+	width: 450px;
+	margin-left: 400px;
+	margin-top: 100px;
+	border-radius: 4px;
+	border: 2px solid red;
+	background-color: #FFF;
+	font-size: 2.5em; 
+	text-align: center;
+	color: #4d4e4f;
+}
 
 .pageChoice
 {
