--- a/public/posts.css
+++ b/public/posts.css
@@ -22,6 +22,19 @@ body
 	border-radius: 4px;
 }
 
+.createPostBtn
+{
+	width: 20%;
+	height: 30%;
+	color: #4d4e4f;
+	float: right;
+	position: relative;
+	font-size: 1.7em;
+	text-align: center;
+	border-radius: 3px;
+	background-color: #F5F5F5;
+}
+
 textarea 
 {
     resize: none;
@@ -34,8 +47,9 @@ textarea
 	-webkit-box-shadow: 0 0 10px rgba(0,0,0,0.6);
 	-o-box-shadow: 0 0 10px rgba(0,0,0,0.6);
 	margin-left: 435px;
-
+	display: inline-block;
 }
+
 .postContainer
 {	
 	text-align: center;
@@ -61,10 +75,49 @@ textarea
 	color: #4d4e4f;
 }
 
+li
+{
+	list-style: none;
+	display: inline-block;
+}
+
+#navBar
+{
+	height: 50px;
+	background-color: #FFF;
+	color: black;
+	padding: 5px;
+}
+
+.siteName
+{
+	width: 100px;
+	float: left;
+	text-align: center;
+	padding-top: 4px;
+	font-size: 1.5em;
+	color: black;
+}
+
+
+
+
+.navbarBoxesRight
+{
+
+	width: 80px;
+	float: right;
+	text-align: center;
+	font-size: 1.1em;
+	margin-left: 5px;
+	padding-top: 8px;
+	display: inline-block;
+}
+
 .pageChoice
 {
 	height: 60px;
-	margin-left: 532px;
+	margin-left: 556px;
 }
 
 .datePosted
