added Mutators for password hashes

--- a/public/posts.css
+++ b/public/posts.css
@@ -41,12 +41,12 @@ textarea
 }
 .postContainerHolder
 {
-	width: 400px;
+	width: 40%;
 	box-shadow: 0 0 10px rgba(0,0,0,0.6);
 	-moz-box-shadow: 0 0 10px rgba(0,0,0,0.6);
 	-webkit-box-shadow: 0 0 10px rgba(0,0,0,0.6);
 	-o-box-shadow: 0 0 10px rgba(0,0,0,0.6);
-	margin-left: 435px;
+	margin-left: 30%;
 	display: inline-block;
 }
 
