--- a/public/posts.css
+++ b/public/posts.css
@@ -2,9 +2,26 @@ body
 {
 	color: #f5f5f5;
 	font-family: 'Lato', sans-serif;
-	background-color: #4d4e4f;
+	background-color: #FFF;
 }
 
+p
+{
+	display: inline-block;
+}
+
+body > div.postContainerHolder > div:nth-child(1) > p:nth-child(7)
+{
+	float: right;
+	margin-right: 7%;
+}
+
+body > div.postContainerHolder > div:nth-child(1) > p:nth-child(6)
+{
+	float: right;
+	margin-right: 3%;
+
+}
 .inputClass
 {
 	height: 200px;
@@ -14,21 +31,13 @@ body
 	border-radius: 4px;
 }
 
-.showPost
-{
-
-	width: 300px;
-	margin-top: 150px;
-	border-radius: 4px;
-}
 
 .createPostBtn
 {
 	width: 20%;
-	height: 30%;
+	height: 20%;
 	color: #4d4e4f;
 	float: right;
-	position: relative;
 	font-size: 1.7em;
 	text-align: center;
 	border-radius: 3px;
@@ -39,22 +48,76 @@ textarea
 {
     resize: none;
 }
+
+.searchInput
+{
+	width: 12%;
+	height: 5%;
+	margin-top: .8%;
+	background-color: #FFF;
+	border: 1px solid black;
+	border-radius: 5px;
+}
+
+.search
+{
+	margin-top: .6%;
+	border-radius: 3px;
+	margin-left: 1%;
+	height: 5%;
+	background-color: white;
+}
+
 .postContainerHolder
 {
-	width: 40%;
+	width: 80%;
+	height: auto;
+	margin-top: 5%;
 	box-shadow: 0 0 10px rgba(0,0,0,0.6);
 	-moz-box-shadow: 0 0 10px rgba(0,0,0,0.6);
 	-webkit-box-shadow: 0 0 10px rgba(0,0,0,0.6);
 	-o-box-shadow: 0 0 10px rgba(0,0,0,0.6);
-	margin-left: 30%;
+	margin-left: 10%;
+	background-color: #FFF;
+	border-bottom: 1px solid grey;
+	color: black;
 	display: inline-block;
+}
+
+.likesBox
+{
+	width: 8.5%;
+	height: auto;
+	
+}
+
+.like
+{
+	width: 37%;
+	height: 30px;
+	display:inline-block;
+	background-size: cover;
+	background-position: center center;
+	background-image: url(/img/like.png);
+}
+
+.boo
+{
+	width: 36.8%;
+	height: 30px;
+	margin-left: 20%;
+	background-image: url(/img/boo.png);
+	display:inline-block;
+	background-size: cover;
+	background-position: center center;
 }
 
 .postContainer
 {	
-	text-align: center;
-	color: #f5f5f5;
+	/*text-align: center;*/
+	color: black;
 	padding: 15px;
+	border-bottom: 1px solid grey;
 	margin-bottom: 15px;
 	margin-top: 15px;
 	border-radius: 5px;
@@ -84,7 +147,7 @@ li
 #navBar
 {
 	height: 50px;
-	background-color: #FFF;
+	background-color: #fd4f00;
 	color: black;
 	padding: 5px;
 }
@@ -96,7 +159,7 @@ li
 	text-align: center;
 	padding-top: 4px;
 	font-size: 1.5em;
-	color: black;
+	color: white;
 }
 
 
@@ -105,7 +168,7 @@ li
 .navbarBoxesRight
 {
 
-	width: 80px;
+	width: 9%;
 	float: right;
 	text-align: center;
 	font-size: 1.1em;
@@ -117,7 +180,7 @@ li
 .pageChoice
 {
 	height: 60px;
-	margin-left: 556px;
+	margin-left: 42%;
 }
 
 .datePosted
