--- a/public/posts.css
+++ b/public/posts.css
@@ -1,8 +1,16 @@
 body
 {
-	color: #f5f5f5;
+	color: black;
 	font-family: 'Lato', sans-serif;
 	background-color: #FFF;
+
+}
+
+button
+{
+	background: transparent;
+	outline: none;
+	border: none;
 }
 
 p
@@ -10,18 +18,28 @@ p
 	display: inline-block;
 }
 
-body > div.postContainerHolder > div:nth-child(1) > p:nth-child(7)
+.whiteStyle
 {
-	float: right;
-	margin-right: 7%;
+	color: #FFF;
 }
 
-body > div.postContainerHolder > div:nth-child(1) > p:nth-child(6)
+.whiteStyle:hover,
+.style:focus
+{
+	color: black;
+}
+
+.votes
 {
 	float: right;
-	margin-right: 3%;
-
+	margin-right: 5%;
 }
+
+.writtenBy
+{
+	display: block;
+}
+
 .inputClass
 {
 	height: 200px;
@@ -30,6 +48,7 @@ body > div.postContainerHolder > div:nth-child(1) > p:nth-child(6)
 	margin-top: 150px;
 	border-radius: 4px;
 }
+
 
 
 .createPostBtn
@@ -71,12 +90,15 @@ textarea
 .postContainerHolder
 {
 	width: 80%;
+	padding: 3%;
 	height: auto;
 	margin-top: 5%;
 	box-shadow: 0 0 10px rgba(0,0,0,0.6);
 	-moz-box-shadow: 0 0 10px rgba(0,0,0,0.6);
 	-webkit-box-shadow: 0 0 10px rgba(0,0,0,0.6);
 	-o-box-shadow: 0 0 10px rgba(0,0,0,0.6);
+	border-top: 1px solid grey;
+	border-bottom: 1px solid grey;
 	margin-left: 10%;
 	background-color: #FFF;
 	border-bottom: 1px solid grey;
@@ -93,7 +115,7 @@ textarea
 
 .like
 {
-	width: 37%;
+	width: 38%;
 	height: 30px;
 	display:inline-block;
 	background-size: cover;
@@ -101,9 +123,14 @@ textarea
 	background-image: url(/img/like.png);
 }
 
+.edited
+{
+	margin-top: 2%;
+}
+
 .boo
 {
-	width: 36.8%;
+	width: 37.6%;
 	height: 30px;
 	margin-left: 20%;
 	background-image: url(/img/boo.png);
@@ -114,12 +141,10 @@ textarea
 
 .postContainer
 {	
-	/*text-align: center;*/
 	color: black;
 	padding: 15px;
-	border-bottom: 1px solid grey;
-	margin-bottom: 15px;
-	margin-top: 15px;
+	margin-bottom: 2px;
+	margin-top: 2px;
 	border-radius: 5px;
 	word-wrap: break-word;
 }
